# spotify-desk-display

./: .gitignore  README.md
spotify_auth_tool/: .env.example  pyproject.toml  pyrightconfig.json
spotify_auth_tool/spotify_auth_tool/: cli.py  config.py  constants.py  nvs_utils.py  spotify_client.py  util.py
spotify_desk_display/: CMakeLists.txt  sdkconfig.defaults
spotify_desk_display/main/: CMakeLists.txt  idf_component.yml  spotify_desk_display.cpp
spotify_desk_display/main/include/callback_events/: wifi_events.h
spotify_desk_display/main/include/display/: framebuffer.h  lcd_display.h
spotify_desk_display/main/include/http_client/: http_client.h  http_response.h
spotify_desk_display/main/include/managers/: callback_manager.h  lvgl_manager.h  nvs_manager.h  wifi_manager.h
spotify_desk_display/main/include/queue/: page_manager_queue_item.h  queue_manager.h  wifi_command.h
spotify_desk_display/main/include/spotify_client/: spotify_client.h  spotify_player_state.h
spotify_desk_display/main/include/tasks/: app_state.h  lvgl_task.h  spotify_task.h  wifi_task.h
spotify_desk_display/main/include/ui/: base_page.h  colors.h  hello_world.h  loading_page.h  page_manager.h  spotify_player_page.h  wifi_dashboard.h
spotify_desk_display/main/include/utils/: encoding.h  pixel.h  pixel_view.h  point.h
spotify_desk_display/main/src/display/: framebuffer.cpp  lcd_display.cpp
spotify_desk_display/main/src/http_client/: http_client.cpp
spotify_desk_display/main/src/managers/: lvgl_manager.cpp  nvs_manager.cpp  wifi_manager.cpp
spotify_desk_display/main/src/queue/: queue_manager.cpp
spotify_desk_display/main/src/spotify_client/: spotify_client.cpp  spotify_player_state.cpp
spotify_desk_display/main/src/tasks/: lvgl_task.cpp  spotify_task.cpp  wifi_task.cpp
spotify_desk_display/main/src/ui/: base_page.cpp  hello_world.cpp  loading_page.cpp  page_manager.cpp  spotify_player_page.cpp  wifi_dashboard.cpp
spotify_desk_display/main/src/utils/: encoding.cpp
