[project]
name = "spotify_auth_tool"
version = "0.1.0"
description = "Configure ESP32 with you Spotify refresh token"
authors = [
    {name = "Ethan Hofton",email = "ethanhofton@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "typer (>=0.25.1,<0.26.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.47.0,<0.48.0)",
    "esptool (>=5.2.0,<6.0.0)",
    "esp-idf-nvs-partition-gen (>=0.2.0,<0.3.0)"
]

[project.scripts]
sat = "spotify_auth_tool.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
